added title and description below the video thumbnail preview
The thumbnail preview section will contain a video player playing the actual video, but for now just to understand, the thumbnail is rendered

--- a/src/styles/videoPreview.css
+++ b/src/styles/videoPreview.css
@@ -5,7 +5,7 @@
 }
 
 .VideoPreviewContainer img {
-    position: absolute;
+    position: relative;
     left: 50%;
     transform: translate(-50%, 0);
 }
